# doomerism

./: Cargo.toml  README.md  Trunk.toml  index.html
docs/: index.html  website-446a83c4ced56512.js  website-446a83c4ced56512_bg.wasm  website-7c7556efbc5e0c0e.js  website-7c7556efbc5e0c0e_bg.wasm  website-b68158717f429937.js  website-b68158717f429937_bg.wasm  website-bbfe5f213a96566e.js  website-bbfe5f213a96566e_bg.wasm  website-e1bbe03748a44553.js  website-e1bbe03748a44553_bg.wasm
src/: main.rs
src/pages/: home.rs  mod.rs
src/routes/: mod.rs
